{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 431,
  "lineage": "d43d6293-a5f6-c583-c0fc-e6e81b9ad389",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gateway-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.155.151.81",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-04-05T15:14:07.490-07:00",
            "id": "projects/dataproject-419118/regions/europe-west9/addresses/gateway-public-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "gateway-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "dataproject-419118",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/addresses/gateway-public-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443",
                  "80",
                  "8080",
                  "8081",
                  "8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-05T15:14:19.232-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dataproject-419118/global/firewalls/allow-external",
            "log_config": [],
            "name": "allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
            "priority": 1000,
            "project": "dataproject-419118",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/firewalls/allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "2379-2380",
                  "10250",
                  "10259",
                  "10257",
                  "30000-32767"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-04-05T15:14:19.040-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dataproject-419118/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
            "priority": 1000,
            "project": "dataproject-419118",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/firewalls/allow-internal",
            "source_ranges": [
              "192.168.7.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gateway-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/disks/gateway-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dataproject-419118/zones/europe-west9-a/instances/gateway-server",
            "instance_id": "818843906152974654",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "aV0elYdag8g=",
            "name": "gateway-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.151.81",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
                "network_ip": "192.168.7.30",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/subnetworks/sdtd-sub-network",
                "subnetwork_project": "dataproject-419118"
              }
            ],
            "project": "dataproject-419118",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/instances/gateway-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gateway"
            ],
            "tags_fingerprint": "UrM6jlsUTDs=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_address.gateway-public-ip",
            "google_compute_network.default",
            "google_compute_subnetwork.default",
            "local_sensitive_file.private_key",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/disks/master-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dataproject-419118/zones/europe-west9-a/instances/master-0",
            "instance_id": "8725777903796472126",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "aV0elYdag8g=",
            "name": "master-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
                "network_ip": "192.168.7.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/subnetworks/sdtd-sub-network",
                "subnetwork_project": "dataproject-419118"
              }
            ],
            "project": "dataproject-419118",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/instances/master-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master"
            ],
            "tags_fingerprint": "4y7qQ8dL1yM=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/disks/worker-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dataproject-419118/zones/europe-west9-a/instances/worker-0",
            "instance_id": "2245667634278156606",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "aV0elYdag8g=",
            "name": "worker-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
                "network_ip": "192.168.7.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/subnetworks/sdtd-sub-network",
                "subnetwork_project": "dataproject-419118"
              }
            ],
            "project": "dataproject-419118",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/instances/worker-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/disks/worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dataproject-419118/zones/europe-west9-a/instances/worker-1",
            "instance_id": "8938217285588207934",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "aV0elYdag8g=",
            "name": "worker-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
                "network_ip": "192.168.7.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/subnetworks/sdtd-sub-network",
                "subnetwork_project": "dataproject-419118"
              }
            ],
            "project": "dataproject-419118",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/zones/europe-west9-a/instances/worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/dataproject-419118/global/networks/sdtd-network",
            "mtu": 0,
            "name": "sdtd-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7794552152763779392",
            "project": "dataproject-419118",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-05T15:14:19.292-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/dataproject-419118/regions/europe-west9/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
            "project": "dataproject-419118",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "dataproject-419118/europe-west9/nat-router/nat-gateway",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "dataproject-419118",
            "region": "europe-west9",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-05T15:14:19.643-07:00",
            "gateway_address": "192.168.7.1",
            "id": "projects/dataproject-419118/regions/europe-west9/subnetworks/sdtd-sub-network",
            "ip_cidr_range": "192.168.7.0/24",
            "name": "sdtd-sub-network",
            "network": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/global/networks/sdtd-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "dataproject-419118",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataproject-419118/regions/europe-west9/subnetworks/sdtd-sub-network",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}